tests/snapshots/integration__integration_tests__help__nested_subcommand_step_commit.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - commit
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    NO_COLOR: ""
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: /nonexistent/test/approvals.toml
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_SYSTEM_CONFIG_PATH: /etc/xdg/worktrunk/config.toml
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
[33m▲[39m [33mProject config: [1mpost-start[22m hook is deprecated in favor of [1mpost-create[22m[39m
[2m↳[22m [2mTo see details, run [4mwt config show[24m; to apply updates, run [4mwt config update[24m[22m
[33m▲[39m [33mProject config has unknown field [1mpost-start[22m (will be ignored)[39m
[1m[31merror:[0m unrecognized subcommand '[1m[33mcommit[0m'

[1m[32mUsage:[0m [1m[36mwt[0m [36m[OPTIONS][0m [36m[COMMAND][0m

For more information, try '[1m[36m--help[0m'.

  [33mtip:[39m  perhaps [36m[1mwt step commit[39m[22m?
